# whoeverslastwins

./: README.md  default.nix
api/: default.nix  stack.yaml  wlw-api.cabal
api/src/: Api.hs  Main.hs
api/src/Api/: Games.hs  Users.hs
api/src/Models/: User.hs  UserToken.hs
api/src/Server/: Games.hs
core/: .gitignore  stack.yaml  wlw-core.cabal  wlw.cabal
core/src/: Api.hs  Main.hs
core/src/Api/: Games.hs  Users.hs
core/src/Models/: Game.hs
server/: default.nix  stack.yaml  wlw-server.cabal
server/src/: Main.hs  Server.hs  Utils.hs
server/src/Server/: Games.hs  Users.hs
web/: .gitignore  build.sh  default.nix  stack.yaml  stackjs.yaml  wlw-web.cabal
web/src/: Main.hs
web/web/: index.html  style.css
