name:                wlw-api
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wlw-api
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base ==4.9.*
                     , monad-logger ==0.3.*
                     , mtl ==2.2.*
                     , persistent ==2.7.*
                     , persistent-sqlite ==2.6.*
                     , servant ==0.11.*
                     , servant-server ==0.11.*
                     , warp ==3.2.*
                     , wlw-core ==0.0.*
