name:                wlw-api
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       aeson ==1.1.*
                     , base ==4.9.*
                     , datetime ==0.3.*
                     , persistent ==2.6.*
                     , persistent-template ==2.5.*
                     , servant-server ==0.9.*
  exposed-modules:     Api
                     , Api.Games
                     , Api.Users
                     , Models.Game
                     , Models.User
                     , Models.UserToken
