name:                wlw-core
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wlw-core
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base ==4.9.*
                     , servant ==0.11.*
                     , servant-server ==0.11.*
                     , warp ==3.2.*
                     , aeson ==1.1.*
  default-language:    Haskell2010
