name:                wlw-server
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wlw-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base ==4.9.*
                     , bcrypt >=0.0.10 && <0.1
                     , bytestring >=0.10.8 && <0.11
                     , datetime ==0.3.*
                     , entropy >=0.3.7 && <0.4
                     , monad-logger ==0.3.*
                     , mtl ==2.2.*
                     , persistent ==2.6.*
                     , persistent-sqlite ==2.6.*
                     , servant ==0.9.*
                     , servant-server ==0.9.*
                     , warp ==3.2.*
                     , wlw-api ==0.0.*
  other-modules:       Server
                     , Server.Games
                     , Server.Users
                     , Utils
