name:                wlw-web
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wlw-web
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base ==4.9.*
  if impl(ghcjs)
    build-depends: ghcjs-base ==0.2.*
  else
    build-depends: ghcjs-base-stub ==0.1.*
